# mpcurses

./: .gitignore  Dockerfile  Makefile  README.md  build.py  build.sh  index.md  pyproject.toml  requirements-build.txt  requirements.txt  screen_layout.md
.github/workflows/: ci.yml  main.yml
docs/examples/: demo.py
docs/examples/03/: sample.py
docs/examples/04/: sample.py  sampleb.py  samplec.py
docs/examples/05/: layout.py  sample.py
docs/examples/06/: layout.py  sample.py
docs/examples/07/: sample.py
docs/examples/08/: sample.py
docs/examples/09/: layout.py
docs/examples/10/: layout.py  sample.py
docs/examples/11/: layout.py
examples/: colors.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example_counter1.py  example_counter2.py  example_counter3.py  primes.py
examples/01/: layout.py  sample.py
examples/02/: layout.py
examples/03/: layout.py  sample.py
examples/04/: sample.py  sampleb.py  samplec.py
examples/05/: sample.py
examples/06/: sample.py
examples/07/: layout.py
examples/08/: layout.py
examples/09/: layout.py  sample.py
examples/10/: sample.py
examples/11/: sample.py
examples/12/: sample.py
examples/sample1/: layout.py  primes.py  sample1.py
examples/screen_layouts/: example1_sl.py  example2_sl.py  example4_sl.py  example5_sl.py  example6_sl.py  example7_sl.py  example_counter.py
mpcurses/: __init__.py  mpcurses.py  screen.py
samples/: sample1.py  sample1_sl.py  sample2.py  sample2_sl.py  sample2a.py  sample2b.py  sample3.py  sample3_sl.py  sample4.py  sample4_sl.py  sample5.py  sample6.py  sample7.py
src/main/python/mpcurses/: __init__.py  (+5 more)
src/unittest/python/: test_handler.py  test_mpcontroller.py  test_mpcurses.py  test_process.py  test_screen.py
tests/: test_mpcurses.py  test_screen.py
